chore: graalvm community update and refactorings