@@ -1,13 +1,14 @@
 package plugins
 
-import dev.suresh.gradle.*
-import dev.suresh.gradle.libs
-import org.gradle.api.tasks.testing.logging.*
-import org.jetbrains.kotlin.gradle.ExperimentalKotlinGradlePluginApi
-import org.jetbrains.kotlin.gradle.dsl.KotlinJsCompile
-import org.jetbrains.kotlin.gradle.dsl.KotlinMultiplatformExtension
+import com.google.devtools.ksp.gradle.KspTaskJvm
+import common.*
+import org.jetbrains.kotlin.gradle.dsl.*
+import org.jetbrains.kotlin.gradle.dsl.jvm.JvmTargetValidationMode
 import org.jetbrains.kotlin.gradle.targets.js.nodejs.*
+import org.jetbrains.kotlin.gradle.targets.js.npm.tasks.KotlinNpmInstallTask
+import org.jetbrains.kotlin.gradle.targets.js.webpack.KotlinWebpackConfig
 import org.jetbrains.kotlin.gradle.targets.js.yarn.*
+import tasks.BuildConfig
 
 plugins {
   java
@@ -20,82 +21,40 @@ plugins {
 
 // Workaround for "The root project is not yet available for build" error.
 // https://slack-chats.kotlinlang.org/t/8236845/does-anybody-use-composite-builds-build-logic-with-applying-
-
 apply(plugin = "org.jetbrains.kotlin.multiplatform")
 
-val kotlinMPP = extensions.getByType<KotlinMultiplatformExtension>()
+val kotlinMultiplatform = extensions.getByType<KotlinMultiplatformExtension>()
 
-@OptIn(ExperimentalKotlinGradlePluginApi::class)
-kotlinMPP.apply {
+kotlinMultiplatform.apply {
   targetHierarchy.default()
 
-  // Configure all compilations of all targets
+  jvmToolchain { configureJvmToolchain() }
+
   targets.all {
-    compilations.all {
-      compilerOptions.configure {
-        apiVersion = kotlinApiVersion
-        languageVersion = kotlinLangVersion
-        allWarningsAsErrors = false
-      }
-    }
+    // Configure all compilations of all targets
+    compilations.all { compilerOptions.configure { configureKotlinCommon() } }
   }
 
   jvm {
     withJava()
     compilations.all {
-      compileJavaTaskProvider?.configure {
-        options.apply {
-          encoding = "UTF-8"
-          release = javaRelease
-          isIncremental = true
-          isFork = true
-          debugOptions.debugLevel = "source,lines,vars"
-          forkOptions.jvmArgs?.addAll(jvmArguments)
-          compilerArgs.addAll(
-              jvmArguments + listOf("-Xlint:all", "-parameters", "--add-modules=$addModules"))
-        }
-      }
-
-      compilerOptions.configure {
-        jvmTarget = kotlinJvmTarget
-        verbose = true
-        javaParameters = true
-        suppressWarnings = false
-        freeCompilerArgs.addAll(
-            "-Xadd-modules=$addModules",
-            "-Xjsr305=strict",
-            "-Xjvm-default=all",
-            "-Xassertions=jvm",
-            "-Xallow-result-return-type",
-            "-Xemit-jvm-type-annotations",
-            "-Xjspecify-annotations=strict",
-        )
-      }
+      compileJavaTaskProvider?.configure { configureJavac() }
+      compilerOptions.configure { configureKotlinJvm() }
     }
 
     // val test by testRuns.existing
-    testRuns.configureEach {
-      executionTask.configure {
-        useJUnitPlatform()
-        jvmArgs(jvmArguments)
-        reports.html.required = true
-        testLogging {
-          events =
-              setOf(
-                  TestLogEvent.STANDARD_ERROR,
-                  TestLogEvent.FAILED,
-                  TestLogEvent.SKIPPED,
-              )
-          exceptionFormat = TestExceptionFormat.FULL
-          showExceptions = true
-          showCauses = true
-          showStackTraces = true
-          showStandardStreams = true
-        }
-      }
-    }
+    testRuns.configureEach { executionTask.configure { configureKotlinTest() } }
+    attributes.attribute(mppTargetAttr, "jvm")
   }
-  // jvm("desktop") {}
+
+  jvm("desktop") {
+    compilations.all {
+      compileJavaTaskProvider?.configure { configureJavac() }
+      compilerOptions.configure { configureKotlinJvm() }
+    }
+    testRuns.configureEach { executionTask.configure { configureKotlinTest() } }
+    attributes.attribute(mppTargetAttr, "desktop")
+  }
 
   js(IR) {
     useEsModules()
@@ -112,47 +71,32 @@ kotlinMPP.apply {
         useKarma { useChromeHeadless() }
       }
 
-      // @OptIn(ExperimentalDistributionDsl::class)
       // distribution { outputDirectory = file("$projectDir/docs") }
     }
   }
 
-  //  wasm {
-  //    binaries.executable()
-  //    browser {
-  //      commonWebpackConfig {
-  //        devServer =
-  //            (devServer ?: KotlinWebpackConfig.DevServer()).copy(
-  //                open =
-  //                    mapOf(
-  //                        "app" to
-  //                            mapOf(
-  //                                "name" to "google chrome",
-  //                            )),
-  //            )
-  //      }
-  //    }
-  //  }
-
-  jvmToolchain {
-    languageVersion = toolchainVersion
-    vendor = toolchainVendor
+  // Disable wasm by default as some of the common dependencies are not compatible with wasm.
+  if (project.hasProperty("wasm")) {
+    wasm {
+      binaries.executable()
+      browser {
+        commonWebpackConfig {
+          devServer =
+              (devServer ?: KotlinWebpackConfig.DevServer()).copy(
+                  open = mapOf("app" to mapOf("name" to "google chrome")))
+        }
+      }
+    }
   }
 
   @Suppress("UNUSED_VARIABLE")
   this.sourceSets {
     all {
-      languageSettings.apply {
-        progressiveMode = true
-        optIn("kotlin.ExperimentalStdlibApi")
-        optIn("kotlin.contracts.ExperimentalContracts")
-        optIn("kotlin.ExperimentalUnsignedTypes")
-        optIn("kotlin.io.path.ExperimentalPathApi")
-        optIn("kotlin.time.ExperimentalTime")
-        optIn("kotlin.ExperimentalMultiplatform")
-        optIn("kotlinx.coroutines.ExperimentalCoroutinesApi")
-        optIn("kotlinx.serialization.ExperimentalSerializationApi")
-        optIn("kotlin.js.ExperimentalJsExport")
+      languageSettings { configureKotlinLang() }
+      // Apply multiplatform library bom to all source sets
+      dependencies {
+        implementation(project.dependencies.enforcedPlatform(libs.kotlin.bom))
+        implementation(project.dependencies.enforcedPlatform(libs.ktor.bom))
       }
     }
 
@@ -161,6 +105,9 @@ kotlinMPP.apply {
         implementation(libs.kotlinx.coroutines.core)
         implementation(libs.kotlinx.datetime)
         implementation(libs.kotlinx.serialization.json)
+        implementation(libs.ktor.client.core)
+        implementation(libs.ktor.client.logging)
+        implementation(libs.ktor.client.serialization)
       }
     }
 
@@ -171,11 +118,28 @@ kotlinMPP.apply {
       }
     }
 
-    val jvmMain by getting { dependencies { implementation(libs.kotlin.stdlib.jdk8) } }
-    val jvmTest by getting
+    val jvmMain by getting {
+      dependencies {
+        implementation(libs.kotlin.stdlib.jdk8)
+        // https://kotlinlang.org/docs/ksp-multiplatform.html
+        project.dependencies.add("kspJvm", libs.ksp.auto.service)
+        implementation(libs.google.auto.annotations)
+      }
+    }
+
+    val jvmTest by getting {
+      dependencies {
+        implementation(project.dependencies.platform(libs.junit.bom))
+        implementation(kotlin("test-junit5"))
+      }
+    }
+
     val jsMain by getting
     val jsTest by getting
   }
+
+  // kotlinDaemonJvmArgs = jvmArguments
+  // explicitApiWarning()
 }
 
 ksp {
@@ -196,7 +160,32 @@ koverReport {
   }
 }
 
+// https://docs.gradle.org/current/userguide/cross_project_publications.html#sec:simple-sharing-artifacts-between-projects
+val commonJsResources by
+    configurations.creating {
+      isCanBeConsumed = true
+      isCanBeResolved = false
+      attributes.attribute(Attribute.of("commonJSResources", String::class.java), "true")
+    }
+
 tasks {
+  if (project.name == commonProjectName) {
+    // Register buildConfig task only for common module
+    val buildConfig by registering(BuildConfig::class) { classFqName = "BuildConfig" }
+    kotlinMultiplatform.sourceSets.named("commonMain") { kotlin.srcDirs(buildConfig) }
+    maybeRegister<Task>("prepareKotlinIdeaImport") { dependsOn(buildConfig) }
+  }
+
+  // configure jvm target for ksp
+  withType(KspTaskJvm::class).all {
+    compilerOptions { configureKotlinJvm() }
+    jvmTargetValidationMode = JvmTargetValidationMode.WARNING
+  }
+
+  withType<KotlinJsCompile>().configureEach { kotlinOptions { configureKotlinJs() } }
+
+  withType<KotlinNpmInstallTask>().configureEach { configureKotlinNpm() }
+
   // Copy the js app to jvm resource
   named<Copy>("jvmProcessResources") {
     val jsBrowserDist = named("jsBrowserDistribution")
@@ -211,36 +200,36 @@ tasks {
       classpath(jvmJar)
     }
   }
-
-  withType<KotlinJsCompile>().configureEach {
-    kotlinOptions {
-      // sourceMap = true
-      // sourceMapEmbedSources = "always"
-      // freeCompilerArgs += listOf("-Xir-per-module")
-    }
-  }
 }
 
-// A workaround to initialize Node.js and Yarn extensions only once in a multimodule project
-val nodeConfigKey = "isNodeJSConfigured"
-var isNodeJSConfigured = System.getProperty(nodeConfigKey).toBoolean()
+artifacts { add("commonJsResources", tasks.named("jsProcessResources")) }
 
-if (!isNodeJSConfigured) {
+dependencies {
+  // add("kspJvm", project(":ksp-processor"))
+}
+
+// A workaround to initialize Node.js and Yarn extensions only once in a multimodule
+// project by setting extra properties on a root project from a subproject.
+// https://docs.gradle.org/current/userguide/kotlin_dsl.html#extra_properties
+var isNodeJSConfigured: String? by rootProject.extra
+
+if (!isNodeJSConfigured.toBoolean()) {
   // https://kotlinlang.org/docs/js-project-setup.html#use-pre-installed-node-js
   rootProject.plugins.withType<NodeJsRootPlugin> {
     rootProject.extensions.configure<NodeJsRootExtension> {
       download = true
-      System.setProperty(nodeConfigKey, "true")
+      isNodeJSConfigured = "true"
+      // nodeVersion = "20.0.0-v8-canaryxxxx"
+      // nodeDownloadBaseUrl = "https://nodejs.org/download/v8-canary"
     }
   }
+
   // https://kotlinlang.org/docs/js-project-setup.html#version-locking-via-kotlin-js-store
   rootProject.plugins.withType<YarnPlugin> {
     rootProject.extensions.configure<YarnRootExtension> {
       download = true
       lockFileDirectory = project.rootDir.resolve("gradle/kotlin-js-store")
-      System.setProperty(nodeConfigKey, "true")
+      isNodeJSConfigured = "true"
     }
   }
 }
-
-// dependencies { add("kspJvm", project(":ksp-processor")) }
